Feat: SSE Last-Event-ID 재연결 계약 구현 [#328]
