# src/main/java/com/mopl/sse/controller/SseController.java
@@ -5,10 +5,7 @@ import com.mopl.global.exception.ErrorCode;
 import com.mopl.sse.service.SseEmitterManager;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.MediaType;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 
 import java.security.Principal;
@@ -23,11 +20,11 @@ public class SseController {
 
     @GetMapping(produces = MediaType.TEXT_EVENT_STREAM_VALUE)
     public SseEmitter subscribe(
-        @RequestParam(
-            name = "LastEventId",
+        @RequestHeader(
+            name = "Last-Event-ID",
             required = false
         )
-        UUID lastEventId,
+        String lastEventId,
         Principal principal
     ) {
         UUID userId = getUserId(principal);
